# DSNreader

./: .gitignore  Dockerfile  PROJECT_STATE.md  README.md  TODO.md  pyproject.toml  roadmap.md  spec-cotisations-comparaison.md  spec.md
demo/: README.md  ben-consulting-services-2026-04-demo-light-errors.dsn
docs/: operator-note-urssaf-apprentice-rule.md  release-notes-2026-04-15-urssaf-apprentice-hardening.md  release-notes-2026-04-apprentis-urssaf.md  urssaf-apprentice-split.md
docs/13. DSN/: 13.1-cotisations-dsn.publicodes  13.2-declarations-dsn.publicodes  13.3-dsn-donnees-paie-rh.publicodes  13.4-informations-declarant.publicodes
dsn_extractor/: __main__.py  block_groups.py  contributions.py  enums.py  extractors.py  models.py  normalize.py  organisms.py  parser.py  urssaf_individual_mapping.py  urssaf_mapping_rules.py
server/: app.py
server/static/: app.js  index.html  style.css
tests/: conftest.py  test_cli.py  test_contributions.py  test_ctp_rates.py  test_demo_fixture.py  test_extractors.py  test_normalize.py  test_parser.py  test_server.py  test_urssaf_e2e_regression.py  test_urssaf_mapping.py  test_urssaf_ui_bundle.py
tests/fixtures/: apprentice_threshold_split.dsn  missing_contract_fields.dsn  multi_establishment.dsn  no_s54_blocks.dsn  real_regression_apprentice_partial_d_minimized.dsn  single_establishment.dsn  thomas_like_100_726_ok_minimized.dsn  unknown_enum_codes.dsn  with_absences.dsn  with_s54_blocks.dsn  with_unknown_exit_and_absence_codes.dsn
